feat: add investor

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -241,6 +241,9 @@
       <a target="_blank" href="https://puzzle.ventures/">
         <img src="/assets/images/home/partners/puzzle.png" alt="">
       </a>
+      <a target="_blank" href="https://www.gate.io/en">
+        <img class="low-low-h" src="/assets/images/home/partners/gate.png" alt="">
+      </a>
     </div>
   </div>
 </section>
