--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -541,6 +541,9 @@ section.partners {
         &.low-h {
           max-height: 80%;
         }
+        &.low-low-h {
+          max-height: 70%;
+        }
         &.low-w {
           max-width: 70%;
         }
