feat: add mathwallet and tokenpocket connect

--- a/src/app/shared/component/header/vault/vault-wallet-connect/vault-wallet-connect.component.html
+++ b/src/app/shared/component/header/vault/vault-wallet-connect/vault-wallet-connect.component.html
@@ -34,7 +34,7 @@
 </nz-modal>
 
 <nz-drawer *ngIf="!showModal" [nzClosable]="false" [nzVisible]="show" nzPlacement="bottom" [nzTitle]="null"
-  (nzOnClose)="close()" nzWrapClassName="custom-drawer">
+  (nzOnClose)="close()" nzWrapClassName="custom-drawer connect-wallet">
   <ng-container *nzDrawerContent>
     <div class="connect-modal-content modal-content mobile-content">
       <div class="header">
