--- a/src/app/shared/component/header/wallet-connect-item/wallet-connect-item.component.scss
+++ b/src/app/shared/component/header/wallet-connect-item/wallet-connect-item.component.scss
@@ -1,6 +1,7 @@
 @import "src/styles/variable.scss";
 ul.wallets {
   padding-left: 70px;
+  overflow: auto;
   li {
     .disabled {
       opacity: 0.5;
