feat: update hub and vault

--- a/src/app/pages/hub/hub-pool/hub-pool.component.scss
+++ b/src/app/pages/hub/hub-pool/hub-pool.component.scss
@@ -22,6 +22,9 @@
     width: 940px;
     background: #252525;
     border-radius: 20px;
+    background: url("/assets/images/hub/eth-pool.png") right bottom no-repeat;
+    background-size: 120px 100px;
+    background-color: #252525;
     .pool-detail {
       padding: 24px 0;
       display: flex;
