--- a/src/app/pages/vault/mobile.scss
+++ b/src/app/pages/vault/mobile.scss
@@ -158,12 +158,59 @@
         }
       }
 
-      & > .right {
+      & > .token-staking-box {
         width: 100%;
         .item-group .name .token-img {
           width: 20px;
           height: 20px;
           margin-right: 5px;
+        }
+      }
+    }
+    .item-container.row-4 {
+      flex-wrap: wrap;
+      justify-content: space-between;
+      margin-bottom: 0px;
+      .title {
+        margin-bottom: 0px;
+      }
+      .group-container {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        .item-group {
+          width: 100%;
+          margin-top: 15px;
+        }
+        &.token-staking-box {
+          .item-group {
+            .stake {
+              display: block;
+              height: auto;
+              width: 100%;
+              background-color: transparent;
+              border-radius: 10px;
+              span {
+                position: relative;
+                display: block;
+                width: 100%;
+                height: 50px;
+                background-color: #292929;
+                border-radius: 10px;
+                cursor: pointer;
+                &:hover {
+                  opacity: 0.7;
+                }
+                &:nth-child(2) {
+                  margin-top: 10px;
+                }
+                &::after {
+                  opacity: 0;
+                }
+              }
+            }
+          }
         }
       }
     }
