--- a/src/app/pages/vault/vault.component.scss
+++ b/src/app/pages/vault/vault.component.scss
@@ -29,7 +29,8 @@
       margin-bottom: 10px;
     }
     &.row-2,
-    &.row-3 {
+    &.row-3,
+    &.row-4 {
       margin-top: 30px;
     }
     &:nth-child(1) {
@@ -54,7 +55,7 @@
         }
       }
     }
-    & > .right {
+    & > .token-staking-box {
       width: 400px;
       .item-group {
         width: 100%;
@@ -162,7 +163,7 @@
         }
       }
     }
-    > .right .claimable-box {
+    > .token-staking-box .claimable-box {
       margin-top: 6px;
     }
     .item-group {
@@ -205,14 +206,19 @@
     .item-total {
       padding-left: 60px;
       background-color: #1e2621;
+      &.eth {
+        background-color: #151a20;
+        .group-content {
+          color: #459ffb;
+        }
+      }
       .group-content {
         font-size: 30px;
-        color: #46b069;
       }
     }
   }
   section.airdrop {
-    background-color: #46b069;
+    background-color: #1e2621;
     border-radius: 10px;
     height: 70px;
     width: 100%;
@@ -234,10 +240,11 @@
     button {
       width: 90px;
       height: 36px;
-      background: #ffffff;
+      background: #1e2621;
       border-radius: 10px;
       color: #46b069;
       cursor: pointer;
+      border: 1px solid #46b069;
       &:hover {
         opacity: 0.8;
       }
@@ -399,6 +406,56 @@
           }
           .token > img {
             margin-right: 15px;
+          }
+        }
+      }
+    }
+    .item-container.row-4 {
+      flex-wrap: wrap;
+      justify-content: space-between;
+      margin-bottom: 30px;
+      .title {
+        margin-bottom: 0px;
+      }
+      .group-container {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        .item-group {
+          width: calc((100% - 30px) / 3);
+          margin-top: 20px;
+          &:not(:nth-child(3n + 1)) {
+            margin-left: 14px;
+          }
+        }
+        &.token-staking-box {
+          .item-group {
+            .stake {
+              display: block;
+              height: auto;
+              width: 100%;
+              background-color: transparent;
+              border-radius: 10px;
+              span {
+                position: relative;
+                display: block;
+                width: 100%;
+                height: 50px;
+                background-color: #292929;
+                border-radius: 10px;
+                cursor: pointer;
+                &:hover {
+                  opacity: 0.7;
+                }
+                &:nth-child(2) {
+                  margin-top: 10px;
+                }
+                &::after {
+                  opacity: 0;
+                }
+              }
+            }
           }
         }
       }
