--- a/src/app/pages/vault/vault.component.scss
+++ b/src/app/pages/vault/vault.component.scss
@@ -5,7 +5,6 @@
     padding-left: 10px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
     .name {
       height: 60px;
       line-height: 60px;
@@ -20,6 +19,11 @@
         height: 2px;
         background: #2ad8a0;
       }
+    }
+    .group-icon img {
+      height: 20px;
+      width: 20px;
+      margin-left: 18px;
     }
   }
   .item-container {
